Bugfixes for spacing, call handling (#67)
* fix audio

* fix where clause and add auto-archiving

* fix calls and text compression

--- a/apps/travel2/style/app.less
+++ b/apps/travel2/style/app.less
@@ -31,6 +31,10 @@ body {
 // }
 
 
+.pure-g {
+    letter-spacing: 0; // override pure setting
+}
+
 html, button, input, select, textarea, .pure-g [class *= "pure-u"] {
     font-family: Raleway;
 }
